# kihamura

./: .gitignore  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: AudioClip.cpp  AudioClip.hpp  AudioObject.cpp  AudioObject.hpp  AudioTrack.cpp  AudioTrack.hpp  Clip.cpp  Clip.hpp  Makefile.am  Makefile.in  Media.cpp  Media.hpp  MediaCollection.cpp  MediaCollection.hpp  ProjectRenderer.cpp  ProjectRenderer.hpp  Track.cpp  Track.hpp  TrackCollection.cpp  TrackCollection.hpp  VideoClip.cpp  VideoClip.hpp  VideoObject.cpp  VideoObject.hpp  VideoProject.cpp  VideoProject.hpp  VideoTrack.cpp  VideoTrack.hpp  gui-main.cpp  gui-main.hpp  interface.glade  main.cpp
src/media/: AnyMedia.cpp  AnyMedia.hpp  FileMedia.cpp  FileMedia.hpp  FileMediaOpener.cpp  FileMediaOpener.hpp  Makefile.am  Makefile.in
